<resources>
    <string name="app_name">Career Mitra</string>
    <string name="alert_internet">There is no Internet Connectivity</string>
    <string name="alert_text">Alert</string>
    <string name="share_using">Enter Mobile No.</string>
    <string name="permission_camera_rationale11">Some permission are required to use the app.</string>
    <string name="reqst_permission">Request permission?</string>
    <string name="sign_in_text">Don\'t have an account ?</string>
    <string name="signup"><u>Register Now</u></string>
    <string name="log_in_text">Already have an account ?</string>
    <string name="log_in"><u>Log In</u></string>
    <string name="version">Version </string>
    <string name="slide_1_title">Search for the job</string>
    <string name="slide_1_desc">Search with us and we will help you\nto find the right job for you </string>
    <string name="slide_2_title">AI Based analytics job match</string>
    <string name="slide_2_desc">Our AI Based analytics dashboard can match\nthe best match for the future job</string>
    <string name="slide_3_title">Get notify with every update</string>
    <string name="slide_3_desc">With every right match profile,\nyou will get a notification</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="e_mail">E-Mail</string>
    <string name="enter_the_verification_code">Enter the Verification Code we \n have sent you on </string>
    <string name="create_your_career_mitra_profile">Create your career mitra profile</string>
    <string name="minimum_6_characters">Minimum 6 characters</string>
    <string name="password_for_your_account_will_also_be_sent_on_this_mail">Password for your account will also be sent on this mail.</string>
    <string name="your_detail_will_be_visible_to_genuine_recruiters">Your detail will be visible to genuine recruiters</string>
    <string name="keyskills_designations_companies">keyskills,Designations,Companies</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_print_and_typesetting_industry_loerm_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_unknown_printer_look_a_galley_of_type_and_scrambled_it_to_make_a_type_specime_book">
        Lorem Ipsum is simply dummy text of the print and typesetting industry Loerm Ipsum has been the industry\'s standard dummy text ever since the 1500s when unknown printer look a galley of type and scrambled it to make a type specime book.</string>
    <string name="resume_uploaded"><u>View Uploaded Resume</u></string>
    <string name="search_job">Search Job</string>
    <string name="change_language">Change Language</string>
    <string name="select_application_nlanguage">Select Application Language</string>
    <string name="view_details"><u>View Details</u></string>
    <string name="document">Document</string>
    <string name="download_ticket">File Downloaded Successfully</string>
    <string name="open_ticket">Open File</string>
    <string name="oprm_file">Open File</string>
    <string name="no_app">No Application available to view PDF</string>
    <string name="download_fail">Download Failed</string>
    <string name="ok">ok</string>
    <string name="downloading">Downloading...</string>
    <string name="view">View</string>
    <string name="moradabad_smart_city">Moradabad Smart City</string>
    <string name="skip">Skip</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="donthave_acc">Don\'t have an account yet ?Sign Up</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="registered_mobile">Enter registered mobile number!</string>
    <string name="enter_pswd">Enter password!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail_id">E-Mail Id</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="valid_mobile">Enter Valid mobile number!</string>
    <string name="first_valid_name">Enter First Name!</string>
    <string name="valid_mail">Enter valid email Id!</string>
    <string name="passwrod_valid">Enter at-least 6 digit password!</string>
    <string name="already">Already Exist!</string>
    <string name="already_mobile">The Mobile number you have entered have already been registered,\nKindly Login to continue.</string>
    <string name="verification">Verification</string>
    <string name="if_you_didn_t_receive_a_code_resend">If you didn\'t receive a code? Resend</string>
    <string name="verify">Verify</string>
    <string name="otp">Enter 6 digit OTP received on your mobile!</string>
    <string name="click_back">Please click BACK again to exit</string>
    <string name="home">Home</string>
    <string name="recent_job">Recent Job</string>
    <string name="applied_jobs">Applied Jobs</string>
    <string name="training">Training</string>
    <string name="view_training">View Training</string>
    <string name="enrollment_program">Enrollment Program</string>
    <string name="chat_for_help">Chat For Help</string>
    <string name="language_setting">Language Setting</string>
    <string name="feedback">Feedback</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="about_us">About Us</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="traning_crose">Training Course</string>
    <string name="jobs_search">Jobs Search</string>
    <string name="settings">Settings</string>
    <string name="login_first_time">Login First</string>
    <string name="please_login_to_first_time">Please Login to continue!</string>
    <string name="enter_the_olde_password">Please enter Old password</string>
    <string name="enter_new_password">Please enter new password</string>
    <string name="new_password_not_be_same_sa_old_password">New Password could not be same as old password</string>
    <string name="password_not_matched">Password not matched</string>
    <string name="enter_valid_mobile_no">Enter Valid Mobile Number!</string>
    <string name="about_company">About Company</string>
    <string name="notification">Notification</string>
    <string name="storage_permission">Permission granted now you can read the storage</string>
    <string name="denie_permission">Oops you just denied the permission</string>
    <string name="select_image">Select Image</string>
    <string name="write_something_about">Write something about yourself!</string>
    <string name="update_company_name">Update Current company</string>
    <string name="enter_company_designation"><![CDATA[Enter Designation & Company Name!]]></string>
    <string name="select_crrosse">Select Course!</string>
    <string name="enter_collage_name">Enter College Name!</string>
    <string name="select_passing_year">Select Passing Year!</string>
    <string name="enter_designation">Enter Designation!</string>
    <string name="enter_company_name">Enter Company Name!</string>
    <string name="select__start_year">Select Start Year!</string>
    <string name="select_end_year">Select End Year!</string>
    <string name="update_personal_information">Update Personal Information</string>
    <string name="enter_father_name">Enter Father Name</string>
    <string name="enter_mother_name">Enter Mother Name</string>
    <string name="login_continue">Please Login to continue!</string>
    <string name="enter_feedback">Enter Feedback</string>
    <string name="search_job_list">Search Job List</string>
    <string name="recommanded_jib">Recommended Jobs</string>
    <string name="applied_job">Applied Jobs</string>
    <string name="your_feedback_at_least_5_word">Your Feedback(At least 5 word)</string>
    <string name="we_will_reach_you_at_9889000000_or_ndesigner_afluex_gmail_com">We will reach you at 9889000000 or\ndesigner.afluex@gmail.com</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="_20_new_job_on_recommended_job">20 new job on recommended job</string>
    <string name="based_on_your_profile">Based On your Profile</string>
    <string name="about">About</string>
    <string name="experience">Experience</string>
    <string name="education">Education</string>
    <string name="personal_details">Personal Details</string>
    <string name="father_name">Father Name</string>
    <string name="mother_name">Mother name</string>
    <string name="phone_no">Phone No</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pin_code">Pin Code</string>
    <string name="skills_endorsements">Skills Endorsements</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="submit">Submit</string>
    <string name="about_yourself">About Yourself..</string>
    <string name="update">Update</string>
    <string name="user_designation">User Designation</string>
    <string name="company_name_location">Company Name/Location</string>
    <string name="enter_college_name">Enter College Name</string>
    <string name="passing_year">Passing Year</string>
    <string name="add_education">Add Education</string>
    <string name="designation_name">Designation Name</string>
    <string name="company_name">Company Name</string>
    <string name="currently_working">Currently Working</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_address_line_1">Enter Address Line 1</string>
    <string name="enter_address_line_2">Enter Address Line 2</string>
    <string name="enter_pin_code">Enter Pin Code</string>
    <string name="resume_upload">Resume Upload</string>
    <string name="update_skills">Update Skills</string>
    <string name="enter_endorsements">Enter Endorsements</string>
    <string name="update_exp">Update Experience</string>
    <string name="start_year">Start Year</string>
    <string name="end_year">End Year</string>
    <string name="about_yur">About Yourself</string>
    <string name="search_job_by_skill">Search Job by Skill</string>
    <string name="location">Location</string>
    <string name="latest_job">Latest Job</string>
    <string name="do_logout">Do you really want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="recruiters_message">Recruiters Message</string>
    <string name="write">Write message</string>
    <string name="select_department">Select Department</string>
    <string name="select_skill">Select Skill</string>
    <string name="salary_range">Salary Range</string>
    <string name="select_qualification">Select Qualification</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="apply">Apply</string>
    <string name="education_qualification">Education Qualification</string>
    <string name="job_highlights">Job Highlights</string>
    <string name="job_description">Job Description</string>
    <string name="roles_and_responsibilities">Roles and Responsibilities</string>
    <string name="requirements">Requirements :</string>
    <string name="description">Description</string>
    <string name="industry_type">Industry Type</string>
    <string name="functionalarea">FunctionalArea</string>
    <string name="carpenter">Carpenter</string>
    <string name="role_category">Role Category</string>
    <string name="employment_type">Employment Type</string>
    <string name="job_details">Job Details</string>
</resources>