<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_action_bar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_designation_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/designation_name"
                android:textColorHint="@color/colorPrimary"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_designation_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords|textMultiLine"
                    android:justificationMode="inter_word"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/company_name"
                android:textColorHint="@color/colorPrimary"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@id/input_designation_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_company_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords|textMultiLine"
                    android:justificationMode="inter_word"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/cb_currnetly_Working"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/currently_working"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_company_name" />

            <TextView
                android:id="@+id/tv_start_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/box_bg"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="8dp"
                android:hint="@string/start_year"
                android:padding="8dp"
                app:layout_constraintEnd_toStartOf="@+id/tv_end_date"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cb_currnetly_Working" />

            <TextView
                android:id="@+id/tv_end_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/box_bg"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="8dp"
                android:hint="@string/end_year"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_start_date"
                app:layout_constraintTop_toBottomOf="@+id/cb_currnetly_Working" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_bg"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_details" />

</androidx.constraintlayout.widget.ConstraintLayout>