<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_action_bar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/select_crrosse"
                android:textColorHint="@color/colorPrimary"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_course"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:drawableEnd="@drawable/vw_ic_arrow_down"
                    android:drawableTint="@color/colorPrimaryDark"
                    android:editable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="textCapWords|textMultiLine"
                    android:justificationMode="inter_word"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_college"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/enter_college_name"
                android:textColorHint="@color/colorPrimary"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/til_course">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_college"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords|textMultiLine"
                    android:justificationMode="inter_word"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_passing_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/passing_year"
                android:textColorHint="@color/colorPrimary"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/til_college">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_passing_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:editable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords|textMultiLine"
                    android:justificationMode="inter_word"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/btn_update"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_bg"
        android:text="@string/add_education"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_details" />
</androidx.constraintlayout.widget.ConstraintLayout>